Almost integrated with google cloud

--- a/app.json
+++ b/app.json
@@ -39,6 +39,10 @@
           "microphonePermission": "LangLearn needs access to your microphone for voice conversation practice."
         }
       ]
-    ]
+    ],
+    "jsEngine": "hermes",
+    "experimental": {
+      "newArchEnabled": true
+    }
   }
 }
