--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
+    "@react-native-firebase/app": "^22.0.0",
+    "@react-native-firebase/auth": "^22.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^52.0.0",
     "expo-av": "~13.10.4",
     "expo-file-system": "~16.0.5",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^11.6.1",
     "metro": "^0.81.4",
     "metro-config": "^0.81.4",
     "metro-resolver": "^0.81.4",
-    "react": "18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "^0.73.11",
+    "react-native-purchases": "^8.9.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
