--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-purchases": "^8.9.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
