--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "io.github.kvgharbigit.langlearn",
-      "googleServicesFile": "./android/google-services.json"
+      "googleServicesFile": "google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
