--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "~18.3.12",
     "expo": "^52.0.0",
     "expo-av": "~15.0.2",
+    "expo-dev-client": "~5.0.20",
     "expo-file-system": "~18.0.12",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.1",
@@ -30,11 +31,11 @@
     "react-native-purchases": "^8.9.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-dev-client": "~5.0.20"
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~18.2.45",
     "typescript": "^5.3.0"
   },
