--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-firebase/app": "^22.0.0",
     "@react-native-firebase/auth": "^22.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.3.12",
-    "expo": "^52.0.0",
-    "expo-av": "~15.0.2",
-    "expo-file-system": "~18.0.12",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.4",
+    "expo-file-system": "~18.1.8",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.1",
-    "metro": "^0.81.4",
+    "metro": "^0.82.0",
     "metro-config": "^0.81.4",
     "metro-resolver": "^0.81.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-purchases": "^8.9.5",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-dev-client": "~5.0.20"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "expo-dev-client": "~5.1.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.3.0"
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
