--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "LangLearn",
-    "slug": "language-tutor",
+    "name": "Confluency",
+    "slug": "confluency",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
