--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "~18.3.12",
     "expo": "^53.0.0",
     "expo-av": "~15.1.4",
+    "expo-dev-client": "~5.1.7",
     "expo-file-system": "~18.1.8",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.1",
@@ -30,8 +31,7 @@
     "react-native-purchases": "^8.9.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "expo-dev-client": "~5.1.7"
+    "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
