--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,14 +13,18 @@
     "@react-native-community/slider": "4.5.6",
     "@react-native-firebase/app": "^22.0.0",
     "@react-native-firebase/auth": "^22.0.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.3.12",
     "expo": "^53.0.0",
+    "expo-auth-session": "^6.1.5",
     "expo-av": "~15.1.4",
+    "expo-crypto": "^14.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-file-system": "~18.1.8",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "^14.1.6",
     "firebase": "^11.6.1",
     "metro": "^0.82.0",
     "metro-config": "^0.81.4",
