--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "confluency",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/transparent_background_icon.png",
     "userInterfaceStyle": "light",
     "scheme": "confluency",
     "intentFilters": [
@@ -21,8 +21,8 @@
     ],
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#4A6FA5"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -39,8 +39,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/favicon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/transparent_background_icon.png",
+        "backgroundColor": "#4A6FA5"
       },
       "package": "io.github.kvgharbigit.langlearn",
       "googleServicesFile": "google-services.json"
