--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Confluency",
-    "slug": "confluency",
+    "slug": "language-tutor",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/transparent_background_icon.png",
