--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,11 @@
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./language-tutor-app-2025-38b20af7ae5a.json",
+        "track": "internal"
+      }
+    }
   }
 }
