--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-cat > .gitignore << 'EOL'
 # Dependencies
 node_modules/
 npm-debug.log
@@ -43,4 +42,6 @@ yarn-error.*
 *.swp
 *.swo
 node_modules/
-EOL
+
+# Google service account keys
+language-tutor-app-2025-*.json
