--- a/eas.json
+++ b/eas.json
@@ -18,7 +18,7 @@
   "submit": {
     "production": {
       "android": {
-        "serviceAccountKeyPath": "./language-tutor-app-2025-38b20af7ae5a.json",
+        "serviceAccountKey": "GOOGLE_SERVICE_ACCOUNT_KEY",
         "track": "internal"
       }
     }
