--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "setup-credentials": "./scripts/setup-credentials.sh",
+    "build:android": "eas build --platform android --profile production",
+    "submit:android": "eas submit --platform android --profile production",
+    "build-submit:android": "npm run setup-credentials && npm run build:android && rm -f service-account.json"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
