--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.3.12",
-    "expo": "^53.0.0",
+    "expo": "~53.0.7",
     "expo-auth-session": "^6.1.5",
     "expo-av": "~15.1.4",
     "expo-crypto": "^14.1.4",
-    "expo-dev-client": "~5.1.7",
+    "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.8",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.1.6",
