--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.5.6",
-    "@react-native-firebase/app": "^22.0.0",
-    "@react-native-firebase/auth": "^22.0.0",
-    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/react": "~18.3.12",
     "expo": "~53.0.7",
     "expo-auth-session": "^6.1.5",
@@ -30,7 +28,6 @@
     "expo-file-system": "~18.1.8",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.1.6",
-    "firebase": "^11.6.1",
     "metro": "^0.82.0",
     "metro-config": "^0.81.4",
     "metro-resolver": "^0.81.4",
@@ -40,7 +37,8 @@
     "react-native-purchases": "^8.9.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
