--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-submit:android": "npm run setup-credentials && npm run build:android && rm -f service-account.json"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/native": "^6.1.9",
@@ -31,6 +31,7 @@
     "metro": "^0.82.0",
     "metro-config": "^0.81.4",
     "metro-resolver": "^0.81.4",
+    "node-fetch": "^2.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
