--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "setup-credentials": "./scripts/setup-credentials.sh",
     "build:android": "eas build --platform android --profile production",
     "submit:android": "eas submit --platform android --profile production",
-    "build-submit:android": "npm run setup-credentials && npm run build:android && rm -f service-account.json"
+    "build-submit:android": "npm run build:android && npm run submit:android"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
