--- a/app.json
+++ b/app.json
@@ -39,7 +39,9 @@
         }
       },
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSMicrophoneUsageDescription": "This app uses the microphone to record your speech for language practice.",
+        "UIBackgroundModes": ["audio"]
       }
     },
     "android": {
