--- a/app.json
+++ b/app.json
@@ -54,8 +54,7 @@
     },
     "newArchEnabled": true,
     "plugins": [
-      "expo-web-browser",
-      "react-native-polyfill-globals"
+      "expo-web-browser"
     ],
     "extra": {
       "eas": {
