--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@supabase/supabase-js": "^2.49.4",
     "@types/react": "~18.3.12",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
     "expo": "~53.0.9",
     "expo-auth-session": "^6.1.5",
     "expo-av": "~15.1.4",
@@ -35,6 +39,7 @@
     "metro-config": "^0.82.0",
     "metro-resolver": "^0.82.0",
     "node-fetch": "^2.7.0",
+    "path-browserify": "^1.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -42,7 +47,9 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "readable-stream": "^4.7.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
