--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "expo-file-system": "~18.1.8",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.1.6",
+    "https-browserify": "^1.0.0",
     "metro": "^0.82.0",
     "metro-config": "^0.82.0",
     "metro-resolver": "^0.82.0",
     "node-fetch": "^2.7.0",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -49,7 +52,9 @@
     "react-native-screens": "~4.10.0",
     "react-native-url-polyfill": "^2.0.0",
     "readable-stream": "^4.7.0",
-    "util": "^0.12.5"
+    "stream-http": "^3.2.0",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
