--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/react": "~18.3.12",
     "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.1",
+    "dgram-browserify": "^0.0.13",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^5.7.0",
     "events": "^3.3.0",
     "expo": "~53.0.9",
     "expo-auth-session": "^6.1.5",
@@ -43,6 +48,8 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "punycode": "^2.3.1",
+    "querystring-es3": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -53,6 +60,10 @@
     "react-native-url-polyfill": "^2.0.0",
     "readable-stream": "^4.7.0",
     "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "timers-browserify": "^2.0.12",
+    "tty-browserify": "^0.0.1",
+    "url": "^0.11.4",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2"
   },
