Working for ios builds!

--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,8 @@
     },
     "production": {
       "autoIncrement": true,
+      "developmentClient": false,
+      "distribution": "store",
       "ios": {
         "resourceClass": "default"
       }
