--- a/eas.json
+++ b/eas.json
@@ -6,10 +6,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "DEPLOY_ENV": "dev"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "DEPLOY_ENV": "testflight"
+      }
     },
     "production": {
       "autoIncrement": true,
@@ -17,6 +23,9 @@
       "distribution": "store",
       "ios": {
         "resourceClass": "default"
+      },
+      "env": {
+        "DEPLOY_ENV": "production"
       }
     }
   },
