--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.10",
+    "eas-cli": "^16.7.1",
     "typescript": "~5.8.3"
   },
   "private": true,
