--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "tty-browserify": "^0.0.1",
     "url": "^0.11.4",
     "util": "^0.12.5",
-    "vm-browserify": "^1.1.2"
+    "vm-browserify": "^1.1.2",
+    "expo-linking": "~7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
