--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-crypto": "^14.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.8",
+    "expo-linking": "~7.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.1.6",
     "https-browserify": "^1.0.0",
@@ -65,14 +66,17 @@
     "tty-browserify": "^0.0.1",
     "url": "^0.11.4",
     "util": "^0.12.5",
-    "vm-browserify": "^1.1.2",
-    "expo-linking": "~7.1.5"
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.10",
-    "eas-cli": "^16.7.1",
+    "eas-cli": "^16.8.0",
     "typescript": "~5.8.3"
+  },
+  "overrides": {
+    "@expo/config-plugins": "~10.0.0",
+    "@expo/prebuild-config": "~9.0.0"
   },
   "private": true,
   "expo": {
