--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^5.7.0",
     "events": "^3.3.0",
-    "expo": "~53.0.9",
-    "expo-auth-session": "^6.1.5",
-    "expo-av": "~15.1.4",
+    "expo": "53.0.10",
+    "expo-auth-session": "~6.2.0",
+    "expo-av": "~15.1.5",
     "expo-crypto": "^14.1.4",
-    "expo-dev-client": "~5.1.8",
+    "expo-dev-client": "~5.2.0",
     "expo-file-system": "~18.1.8",
     "expo-linking": "~7.1.5",
     "expo-status-bar": "~2.2.3",
@@ -53,7 +53,7 @@
     "querystring-es3": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-purchases": "^8.10.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
