--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^5.7.0",
     "events": "^3.3.0",
-    "expo": "53.0.10",
+    "expo": "53.0.11",
     "expo-auth-session": "~6.2.0",
     "expo-av": "~15.1.5",
-    "expo-crypto": "^14.1.4",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.0",
     "expo-file-system": "~18.1.8",
     "expo-linking": "~7.1.5",
