--- a/app.json
+++ b/app.json
@@ -27,8 +27,8 @@
     },
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "cover",
-      "backgroundColor": "#4A6FA5"
+      "resizeMode": "contain",
+      "backgroundColor": "#f57c00"
     },
     "assetBundlePatterns": [
       "**/*"
