--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "langlearn-mobile",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -32,15 +32,15 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^5.7.0",
     "events": "^3.3.0",
-    "expo": "53.0.11",
-    "expo-auth-session": "~6.2.0",
-    "expo-av": "~15.1.6",
+    "expo": "53.0.19",
+    "expo-auth-session": "~6.2.1",
+    "expo-av": "~15.1.7",
     "expo-crypto": "~14.1.5",
-    "expo-dev-client": "~5.2.0",
+    "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.8",
-    "expo-linking": "~7.1.5",
+    "expo-linking": "~7.1.7",
     "expo-status-bar": "~2.2.3",
-    "expo-web-browser": "^14.1.6",
+    "expo-web-browser": "~14.2.0",
     "https-browserify": "^1.0.0",
     "metro": "^0.82.0",
     "metro-config": "^0.82.0",
@@ -53,7 +53,7 @@
     "querystring-es3": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-purchases": "^8.10.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
@@ -76,7 +76,11 @@
   },
   "overrides": {
     "@expo/config-plugins": "~10.0.0",
-    "@expo/prebuild-config": "~9.0.0"
+    "@expo/prebuild-config": "~9.0.0",
+    "uglify-js": "^3.19.3",
+    "ws": "^8.18.0",
+    "xmlhttprequest": "^1.8.0",
+    "socket.io-client": "^4.8.1"
   },
   "private": true,
   "expo": {
